--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <div class="rating-circle"></div>
         <div class="rating-circle"></div>
     </div>
+    <script>
+        
+    </script>
 </body>
 
 </html>
