--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
         <div class="rating-circle"></div>
     </div>
     <script>
-        
+        $(document).ready(function(){
+            $("#rating-container .rating-circle").mouseover (function(){
+                $(this).removeClass('rating-chosen').prevAll().removeClass('rating-chosen');
+                $(this).addClass('rating-hover').prevAll().addClass('rating-hover');
+            });
+            $("#rating-container .rating-circle").mouseout(function(){
+                $(this).removeClass('rating-hover').prevAll().removeClass('rating-hover');
+            });
+            $("#rating-container .rating-circle").click(function(){
+                $(this).removeClass('rating-hover').prevAll().removeClass('rating-hover');
+                $(this).addClass('rating-chosen');
+                $(this).prevAll().addClass('rating-chosen');
+            });               
+        });
+
     </script>
 </body>
 
