--- a/lab2.html
+++ b/lab2.html
@@ -49,7 +49,18 @@
         for(i=0; i<newmax; i++){
           $('#rating-container').append('<div class="rating-circle "></div>')
         }
-        
+        $("#rating-container .rating-circle").mouseover (function(){
+                $(this).removeClass('rating-chosen').prevAll().removeClass('rating-chosen');
+                $(this).addClass('rating-hover').prevAll().addClass('rating-hover');
+            });
+            $("#rating-container .rating-circle").mouseout(function(){
+                $(this).removeClass('rating-hover').prevAll().removeClass('rating-hover');
+            });
+            $("#rating-container .rating-circle").click(function(){
+                $(this).removeClass('rating-hover').prevAll().removeClass('rating-hover');
+                $(this).addClass('rating-chosen');
+                $(this).prevAll().addClass('rating-chosen'); 
+                });
       });
     });
  </script>
