--- a/lab2.html
+++ b/lab2.html
@@ -42,13 +42,20 @@
 </div>
 
  <script>
-    $(document).ready(function(){
-      $('#update-max-value').click(function(){
-        $('#rating-container').empty();
-        var newmax=$('#max-value').val();
-        for(i=0; i<newmax; i++){
-          $('#rating-container').append('<div class="rating-circle "></div>')
+    function createCircles(max){
+      if(max){
+        for(var i = 0; i < max; i++){
+          $('#rating-container').append('<div class="rating-circle"></div>')
         }
+      }
+    }
+    $(function(){
+      var imax = $('#rating-container').attr('max-value')
+      createCircles(imax);
+      $('#update-max-value').click(function(){
+        var max = $("#max-value").val();
+        $('#rating-container').html("");
+        createCircles(max);
         $("#rating-container .rating-circle").mouseover (function(){
                 $(this).removeClass('rating-chosen').prevAll().removeClass('rating-chosen');
                 $(this).addClass('rating-hover').prevAll().addClass('rating-hover');
@@ -61,8 +68,8 @@
                 $(this).addClass('rating-chosen');
                 $(this).prevAll().addClass('rating-chosen'); 
                 });
-      });
-    });
+    });      
+        });        
  </script>
 </body>
 </html>
